<resources>
  <string name="app_name">Alexandra</string>

  <string name="rollbar_key">5d0929ea71874834be21dd469a98b1eb</string>

  <string name="resume">Resume</string>
  <string name="start">Start</string>
  <string name="timer_template">00.00.000</string>
  <string name="difficulty_template">1</string>
  <string name="score">You scored</string>
  <string name="level">level</string>
  <string name="highscore_label">level highscore</string>
  <string name="share">share</string>
  <string name="invert_x">Invert X axis</string>
  <string name="invert_y">Invert Y axis</string>
  <string name="sensor_sensitivity">Sensor sensitivity</string>
</resources>
